# agent-cli

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  LICENSE  Makefile  README.md  agent_cli_backup.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml
agent-cli-test/: pyvenv.cfg
agent-cli-test/Scripts/: activate  activate.bat
scripts/: postinstall.js  preuninstall.js
src/agent_cli/: __init__.py  __main__.py  cli.py  cli_zero_config.py  config.py  exceptions.py  interfaces.py
src/agent_cli/core/: __init__.py  creator.py  templates.py  validator.py
src/agent_cli/generators/: __init__.py  project_generator.py
src/agent_cli/templates/: __init__.py  file_templates.py  project_templates.py  static_templates.py  template_categories.py  template_validator.py
tests/integration/: test_integration.py
tests/unit/: test_cli.py
